--- a/server/Makefile
+++ b/server/Makefile
@@ -1,11 +1,11 @@
-bin/server : bin/main.o bin/server.o bin/connections.o bin/messages.o
+bin/server : bin/main.o bin/server.o bin/connections.o bin/messages.o bin/server.o
 	gcc bin/main.o bin/server.o bin/connections.o bin/messages.o -o bin/server
 
-bin/main.o : src/main.c inc/connections.h inc/messages.h ../pub/event.h
+bin/main.o : src/main.c inc/server.h
 	gcc -Iinc -I../pub -c src/main.c -o bin/main.o
 
-bin/server.o : inc/server.h src/server.c connections.h
-	gcc -Iinc src/server.c -o bin/server.c
+bin/server.o : inc/server.h src/server.c inc/connections.h  inc/messages.h inc/user.h ../pub/event.h
+	gcc -Iinc -I../pub -c src/server.c -o bin/server.o
 
 bin/connections.o : inc/connections.h src/connections.c inc/user.h ../pub/event.h
 	gcc -Iinc -I../pub -c src/connections.c -o bin/connections.o
